@@ -93,6 +93,11 @@ table {
   --lh3: 1.375;
   --lh4: 1.5;
   --lh5: 2;
+  --br1: .125rem;
+  --br2: .25rem;
+  --br3: .5rem;
+  --br4: .75rem;
+  --br5: 1rem;
   --black: #040404;
   --white: #fff;
   --black-95: rgba(4, 4, 4, .95);
@@ -3702,35 +3707,23 @@ hr {
 }
 
 .br1 {
-  border-radius: .125rem;
+  border-radius: var(--br1);
 }
 
 .br2 {
-  border-radius: .25rem;
+  border-radius: var(--br2);
 }
 
 .br3 {
-  border-radius: .5rem;
+  border-radius: var(--br3);
 }
 
 .br4 {
-  border-radius: .75rem;
+  border-radius: var(--br4);
 }
 
 .br5 {
-  border-radius: 1rem;
-}
-
-.br6 {
-  border-radius: 1.25rem;
-}
-
-.br7 {
-  border-radius: 1.5rem;
-}
-
-.br8 {
-  border-radius: 2rem;
+  border-radius: var(--br5);
 }
 
 .br100 {
