@@ -48,14 +48,11 @@
 .bc-purple { --border-color: var(--purple); }
 .bc-maroon { --border-color: var(--maroon); }
 
-.br1 { border-radius: .125rem; }
-.br2 { border-radius: .25rem; }
-.br3 { border-radius: .5rem; }
-.br4 { border-radius: .75rem; }
-.br5 { border-radius: 1rem; }
-.br6 { border-radius: 1.25rem; }
-.br7 { border-radius: 1.5rem; }
-.br8 { border-radius: 2rem; }
+.br1 { border-radius: var(--br1); }
+.br2 { border-radius: var(--br2); }
+.br3 { border-radius: var(--br3); }
+.br4 { border-radius: var(--br4); }
+.br5 { border-radius: var(--br5); }
 .br100 { border-radius: 100%; }
 .br999 { border-radius: 999px; }
 
