@@ -1,6 +1,8 @@
 * 0.13.1 (2020-11-XX)
 
   * (border) add .br999
+  * (border) drop .br[6-8]
+  * (variables) add --br[1-5]
   * (type) add .fw1000
   * (type) depreciate .normal
 
